# Flocking-VGU

./: CMakeLists.txt  README.md  footbot_flocking.cpp
controllers/: footbot_flocking.h
experiments/: flocking.argos
